2013-12-01  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* net/shr.el (shr-tag-video): Display content for video if no
	poster is available.
	(shr-tag-audio): Add support for <audio> tag.

	* net/eww.el (eww-text-input-types): : New const.
	(eww-process-text-input): Treat input types in
	`eww-text-input-types' as text.

	* net/shr.el (shr-tag-table): Fix comment typo.

2013-12-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-follow-link): New command to avoid reloading
	pages when we follow #target links (bug#15243).
	(eww-quit): Special mode buffers shouldn't query before exiting.

2013-12-01  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

	* net/eww.el (eww-tag-select): Support <optgroup> tags in <select>
	forms.

2013-12-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-restore-history): Update the window title after
	moving in the history.
	(eww-current-dom): New variable used to save the current DOM.

2013-12-01  Dmitry Gutov  <dgutov@yandex.ru>

	* vc/log-edit.el (log-edit-mode-map): Add binding for
	`log-edit-beginning-of-line'.
	(log-edit-setup-add-author): New user option.
	(log-edit-beginning-of-line): New command.
	(log-edit): Move major mode call above the contents setup so that
	the local variable values are already applied.
	(log-edit): Only insert "Author: " when
	`log-edit-setup-add-author' is non-nil.
	(log-edit): When SETUP is non-nil, position point after ": "
	instead of point-min.

2013-12-01  Glenn Morris  <rgm@gnu.org>

	* startup.el (command-line): Warn if ~/emacs.d is in load-path.

2013-11-30  Eli Zaretskii  <eliz@gnu.org>

	* startup.el (fancy-splash-frame): On MS-Windows, trigger
	redisplay to make sure the initial frame gets a chance to become
	visible.  (Bug#16014)

2013-11-30  Martin Rudalics  <rudalics@gmx.at>

	Support resizing frames and windows pixelwise.
	* cus-start.el (frame-resize-pixelwise)
	(window-resize-pixelwise): New entries.